# craquelure

./: .gitignore  flask_app.py  main.py  pyproject.toml  render.yaml  requirements.txt
articles/: DAP_freedom.html  agency.html  cognitive_debt.html  division.html  dwarves.html  enshittocene_guide.html  erasers.html  free_dessert.html  not_django.html  on_leaving.html  ram_prices.html  revealed_preferences.html  slower_by_half.html  tacos.html  temple.html  temple.txt  tsa.html  webscrape.html  world_music.html
articles/tsa/: plot_tsa.py  vote_data.json
static/: style.css
static/images/: map_data.js
templates/: article.html  base.html  home.html
