[project]
name = "craquelure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
    "requests>=2.33.0",
]
